Added requirements for group. Added FIXME for checks

--- a/students.html
+++ b/students.html
@@ -52,7 +52,7 @@
 	      Группа пользователя:
 	    </div>
 	    <div class="field_value">
-	      <select id="groupselectorid" name="groupselector" onChange="check_validity()">
+	      <select id="groupselectorid" name="groupselector" required=true onChange="check_validity()">
 		</select>
 	      </div>
 	    </div>
