--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h2><a href="students.html">Я студент</a></h2>
 <h2>Я преподаватель</h2>
 <h2>Я лаборант</h2>
+<h2><a href="admin/">Я администратор</a></h2>
 </body>
 </html>
