--- a/admin/index.html
+++ b/admin/index.html
@@ -4,14 +4,39 @@
     <title>
       Административный интерфейс
     </title>
+    <script type="text/javascript" src="ui.js">
+    </script>
   </head>
   <body>
-    <h1>Административный интерфейс</h1>
-    <h2>Очередь создания пользователей для студентов</h2>
-    <h2>Пользователи студентов</h2>
-    <h2>Запросы на создание пользователей преподавателями</h2>
-    <h2>Запросы на создание пользователей лаборантами</h2>
-    <h2>Группы студентов</h2>
+    <div>
+      <div>
+	<h1>Административный интерфейс</h1>
+      </div>
+      <div>
+	<button onClick="div_toggle('student_created');">Студенты созданные</button>
+	<button onClick="div_toggle('student_queue');"  >Студенты</button>
+	<button onClick="div_toggle('teachers_queue');" >Преподаватели</button>
+	<button onClick="div_toggle('personal_queue');" >Лаборанты</button>
+	<button onClick="div_toggle('groups_created');" >Группы студентов</button>
+      </div>
+      <div id="UI_elements">
+	<div style="display: inline" id="student_queue" class="UI_tab" >
+	  <h2>Очередь создания пользователей для студентов</h2>
+	</div>
+	<div style="display: none" id="student_created" class="UI_tab" >
+	  <h2>Пользователи студентов</h2>
+	</div>
+	<div style="display: none" id="teachers_queue" class="UI_tab" >
+	  <h2>Запросы на создание пользователей преподавателями</h2>
+	</div>
+	<div style="display: none" id="personal_queue" class="UI_tab" >
+	  <h2>Запросы на создание пользователей лаборантами</h2>
+	</div>
+	<div style="display: none" id="groups_created" class="UI_tab" >
+	  <h2>Группы студентов</h2>
+	</div>
+      </div>
+    </div>
   </body>
 </html>
 
