--- a/admin/index.html
+++ b/admin/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset=utf8>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>
       Административный интерфейс
     </title>
@@ -8,8 +9,8 @@
     </script>
   </head>
   <body>
-    <div>
-      <div>
+    <div id="container">
+      <div id="header">
 	<h1>Административный интерфейс</h1>
       </div>
       <div>
