--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
-<head>
-<meta charset="utf8">
-<title>
-Сервис запроса имени пользователя
-</title>
-</head>
-<body>
-<h1>Сервис запроса имени пользователя</h1>
-<h2><a href="students.html">Я студент</a></h2>
-<h2>Я преподаватель</h2>
-<h2>Я лаборант</h2>
-<h2><a href="admin/">Я администратор</a></h2>
-</body>
+  <head>
+    <meta charset="utf8">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>
+      Сервис запроса имени пользователя
+    </title>
+  </head>
+  <body>
+    <h1>Сервис запроса имени пользователя</h1>
+    <h2><a href="students.html">Я студент</a></h2>
+    <h2>Я преподаватель</h2>
+    <h2>Я лаборант</h2>
+    <h2><a href="admin/">Я администратор</a></h2>
+  </body>
 </html>
